--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/server.js",
-    "dev": "nodemon ./src/server.js"
+    "dev": "nodemon ./src/server.js",
+    "migrate": "knex migrate:latest"
   },
   "keywords": [],
   "author": "Lucas Holanda",
@@ -16,6 +17,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "js": "^0.1.0",
+    "knex": "^2.4.2",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4"
   },
